# libschnorr256k1

./: CLAUDE.md  CMakeLists.txt  README.md
bench/: bench_vs_libsecp256k1.c  benchmark.c
scripts/: build_android.sh
src/: sha256.c  sha256_hw.h  sha256_hw_arm.c  sha256_hw_x86.c
